# Ask-Docs-AI

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: middleware.py
backend/app/api/routes/: __init__.py  health.py  index.py  query.py
backend/app/cache/: __init__.py
backend/app/core/: chunking.py  embeddings.py  llm.py  rag_pipeline.py  reranker.py  retriever.py  streaming.py  vector_store.py
backend/app/ingestion/: loader.py
backend/app/ingestion/parsers/: __init__.py  base.py  excel.py  html.py  markdown.py  pdf.py  text.py
backend/app/models/: __init__.py  internal.py  requests.py  responses.py
backend/app/observability/: __init__.py  logging.py  timing.py
backend/app/safety/: __init__.py  abstention.py  redaction.py  validation.py
backend/app/utils/: hashing.py  ignore_rules.py
backend/docs/: api-reference.md  configuration.md  getting-started.md
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_query_streaming.py
backend/tests/unit/: test_chunking.py  test_retriever.py  test_validation.py
docs/: api-reference.md  configuration-guide.txt  data-formats.xlsx  faq.html  getting-started.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: AskDocsWidget.tsx  index.ts  main.tsx
frontend/src/components/: Citation.tsx  (+8 more)
helm/ask-docs/: Chart.yaml  values.yaml
scripts/: download-models.sh  run_sample.sh  setup-dev.sh
(+14 files in other folders)
